# KNN

./: CLI.cpp  CLI.h  CMakeLists.txt  Command.cpp  Command.h  CommandAlgorithmSettings.cpp  CommandAlgorithmSettings.h  CommandClassifyData.cpp  CommandClassifyData.h  CommandDisplayResults.cpp  CommandDisplayResults.h  CommandDownloadResults.cpp  CommandDownloadResults.h  CommandExit.cpp  CommandExit.h  CommandNotExists.cpp  CommandNotExists.h  CommandUploadUnClasified.cpp  CommandUploadUnClasified.h  DataAdapter.cpp  DataAdapter.h  DefaultIO.cpp  DefaultIO.h  DistanceCalculator.cpp  DistanceCalculator.h  FileDownloader.cpp  FileDownloader.h  Globals.cpp  Globals.h  IrisFileUtils.cpp  IrisFileUtils.h  Knn.cpp  Knn.h  Makefile  README.md  Settings.cpp  Settings.h  SocketIO.cpp  SocketIO.h  StandardIO.cpp  (+16 more)
